evaluated various sms APIs

--- a/frontend/agri-price-tracker/src/app/components/sms-interface/sms-interface.component.html
+++ b/frontend/agri-price-tracker/src/app/components/sms-interface/sms-interface.component.html
@@ -93,8 +93,8 @@
                   <label class="form-label">SMS Type</label>
                   <select class="form-select" [(ngModel)]="smsData.type" name="type" required>
                     <option value="">Select SMS Type</option>
-                    <option value="price-alert">Price Alert</option>
-                    <option value="price-update">Price Update</option>
+                    <option value="alert">Price Alert</option>
+                    <option value="update">Price Update</option>
                     <option value="prediction">Price Prediction</option>
                     <option value="weather">Weather Alert</option>
                     <option value="general">General Information</option>
